tests/NormalTests/paczka1/fuzzy1/63563784.err
Error in line 1: ajpve S685 69,3
Error in line 5: S685 S700 13,0
Error in line 18: S685 A699 77,0
Error in line 25: g7JzU6V S422 222,2
Error in line 35: W55CHzBjiZY A699 28,5
